new profile design and radio button problem solve

--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -21,120 +21,127 @@
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|enterAlways">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/event_searchCV"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="5dp"
-                android:backgroundTint="@android:color/white"
-                app:cardCornerRadius="5dp">
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-                <RelativeLayout
-                    android:id="@+id/rl1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/event_searchCV"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:backgroundTint="@android:color/white"
+                    app:cardCornerRadius="5dp">
 
-                    <ImageView
-                        android:id="@+id/event_nav_icon"
+                    <RelativeLayout
+                        android:id="@+id/rl1"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:padding="10dp"
-                        android:src="@drawable/ic_menu_black_24dp" />
+                        android:layout_height="match_parent">
 
-                    <EditText
-                        android:id="@+id/event_searchET"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_toStartOf="@+id/searchIV"
-                        android:layout_toEndOf="@+id/event_nav_icon"
-                        android:background="@null"
-                        android:cursorVisible="false"
-                        android:gravity="center_vertical"
-                        android:hint="@string/district"
-                        android:paddingStart="15dp"
-                        android:paddingEnd="15dp"
-                        android:textColor="@android:color/black"
-                        android:textColorHint="@android:color/darker_gray"
-                        android:textSize="17sp" />
+                        <ImageView
+                            android:id="@+id/event_nav_icon"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:padding="15dp"
+                            android:src="@drawable/ic_menu4" />
 
-                    <ImageView
-                        android:id="@+id/searchIV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="5dp"
-                        android:layout_toStartOf="@+id/moreTV"
-                        android:background="@drawable/custom_round"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_search" />
+                        <EditText
+                            android:id="@+id/event_searchET"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_toStartOf="@+id/searchIV"
+                            android:layout_toEndOf="@+id/event_nav_icon"
+                            android:background="@null"
+                            android:cursorVisible="false"
+                            android:gravity="center_vertical"
+                            android:hint="@string/district"
+                            android:paddingStart="15dp"
+                            android:paddingEnd="15dp"
+                            android:textColor="@android:color/black"
+                            android:textColorHint="@android:color/darker_gray"
+                            android:textSize="17sp" />
+
+                        <ImageView
+                            android:id="@+id/searchIV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="5dp"
+                            android:layout_toStartOf="@+id/moreTV"
+                            android:background="@drawable/custom_round"
+                            android:padding="8dp"
+                            android:src="@drawable/ic_search" />
+
+                        <TextView
+                            android:id="@+id/moreTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:drawableStart="@drawable/ic_more_black_24dp"
+                            android:visibility="visible" />
+
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_below="@+id/event_searchCV"
+                    android:id="@+id/radioLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <TextView
-                        android:id="@+id/moreTV"
+                        android:id="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:drawableStart="@drawable/ic_more_black_24dp"
-                        android:visibility="visible" />
+                        android:layout_gravity="center_vertical"
+                        android:fontFamily="sans-serif"
+                        android:text="Search By:"
+                        android:textColor="#000000"
+                        android:textSize="16sp" />
 
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
+                    <co.ceryle.radiorealbutton.RadioRealButtonGroup
+                        android:id="@+id/radioGroup"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        app:rrbg_animateTexts_enter="anticipateOvershoot"
+                        app:rrbg_dividerColor="@color/colorBlack"
+                        app:rrbg_dividerSize="1dp"
+                        app:rrbg_selectorColor="@color/colorGreen"
+                        app:rrbg_selectorRadius="10dp"
+                        app:rrbg_selectorSize="3dp">
+
+                        <co.ceryle.radiorealbutton.RadioRealButton
+                            android:id="@+id/radioBTN1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:rrb_checked="true"
+                            app:rrb_text="District"
+                            app:rrb_textColor="@color/colorBlack" />
+
+                        <co.ceryle.radiorealbutton.RadioRealButton
+                            android:id="@+id/radioBTN2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:rrb_text="Group Name"
+                            app:rrb_textColor="@color/colorBlack" />
+
+
+                    </co.ceryle.radiorealbutton.RadioRealButtonGroup>
+                </LinearLayout>
+            </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <LinearLayout
-            android:id="@+id/radioLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="sans-serif"
-                android:text="Search By:"
-                android:textColor="#000000"
-                android:textSize="16sp" />
-
-            <co.ceryle.radiorealbutton.RadioRealButtonGroup
-                android:id="@+id/radioGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                app:rrbg_animateTexts_enter="anticipateOvershoot"
-                app:rrbg_dividerColor="@color/colorBlack"
-                app:rrbg_dividerSize="1dp"
-                app:rrbg_selectorColor="@color/colorGreen"
-                app:rrbg_selectorRadius="10dp"
-                app:rrbg_selectorSize="3dp">
-
-                <co.ceryle.radiorealbutton.RadioRealButton
-                    android:id="@+id/radioBTN1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:rrb_checked="true"
-                    app:rrb_text="District"
-                    app:rrb_textColor="@color/colorBlack" />
-
-                <co.ceryle.radiorealbutton.RadioRealButton
-                    android:id="@+id/radioBTN2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:rrb_text="Group Name"
-                    app:rrb_textColor="@color/colorBlack" />
-
-
-            </co.ceryle.radiorealbutton.RadioRealButtonGroup>
-        </LinearLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
