--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -21,96 +21,204 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp" />
-
-                <View
-                    android:layout_width="50dp"
-                    android:layout_height="60dp"
-                    android:layout_alignParentEnd="true" />
-            </RelativeLayout>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="5dp"
-                android:backgroundTint="@android:color/white"
-                app:cardCornerRadius="15dp">
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
                 <FrameLayout
-                    android:id="@+id/frame_layout1"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="center"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="350dp">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/profileIV"
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="280dp"
+                        android:background="@drawable/gradiant_design" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <RelativeLayout
+                            android:id="@+id/progressLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <ProgressBar
+                                android:id="@+id/progressBar"
+                                style="?android:attr/progressBarStyle"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="15dp"
+                                android:layout_marginBottom="5dp" />
+
+                            <View
+                                android:layout_width="50dp"
+                                android:layout_height="60dp"
+                                android:layout_alignParentEnd="true" />
+                        </RelativeLayout>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="140dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="10dp"
+                            android:backgroundTint="@android:color/white"
+                            app:cardCornerRadius="15dp">
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+
+                                <LinearLayout
+                                    android:visibility="gone"
+                                    android:id="@+id/ratingLayout"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:layout_centerInParent="true"
+                                    android:transitionName="ratingTransition">
+
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
+                                        android:layout_marginStart="3dp"
+                                        android:src="@drawable/ic_star_black_24dp"
+                                        android:textColor="@android:color/black" />
+
+                                    <TextView
+                                        android:layout_width="25dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
+                                        android:layout_marginStart="3dp"
+                                        android:layout_marginEnd="5dp"
+                                        android:gravity="center"
+                                        android:text="4.5"
+                                        android:textColor="@android:color/black"
+                                        android:textSize="18sp" />
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:id="@+id/l2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentBottom="true">
+
+                                    <LinearLayout
+                                        android:layout_width="0dp"
+                                        android:layout_height="80dp"
+                                        android:layout_weight="1"
+                                        android:background="@color/colorPrimary"
+                                        android:gravity="center"
+                                        android:orientation="vertical">
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/amarante"
+                                            android:text="19"
+                                            android:textColor="@android:color/black"
+                                            android:textSize="18sp" />
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/amarante"
+                                            android:text="Tour"
+                                            android:textColor="@android:color/black"
+                                            android:textSize="18sp" />
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="0dp"
+                                        android:layout_height="80dp"
+                                        android:layout_weight="1"
+                                        android:background="@color/colorPrimary"
+                                        android:gravity="center"
+                                        android:orientation="vertical">
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/amarante"
+                                            android:text="4.5"
+                                            android:textColor="@android:color/black"
+                                            android:textSize="18sp" />
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/amarante"
+                                            android:text="Rating"
+                                            android:textColor="@android:color/black"
+                                            android:textSize="18sp" />
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="0dp"
+                                        android:layout_height="80dp"
+                                        android:layout_weight="1"
+                                        android:background="@color/colorPrimary"
+                                        android:gravity="center"
+                                        android:orientation="vertical">
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/amarante"
+                                            android:text="10"
+                                            android:textColor="@android:color/black"
+                                            android:textSize="18sp" />
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/amarante"
+                                            android:text="Event"
+                                            android:textColor="@android:color/black"
+                                            android:textSize="18sp" />
+                                    </LinearLayout>
+
+
+                                </LinearLayout>
+
+                            </RelativeLayout>
+
+
+                        </androidx.cardview.widget.CardView>
+
+                    </RelativeLayout>
+
+                    <FrameLayout
+                        android:id="@+id/frame_layout1"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:src="@drawable/upload_user_photo"
-                        android:transitionName="imageTransition"
-                        app:civ_border_color="@color/color1"
-                        app:civ_border_width="5dp" />
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="100dp">
 
-                    <ImageView
-                        android:id="@+id/cameraIV"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_gravity="bottom|end"
-                        android:background="@drawable/custom_round2"
-                        android:padding="12dp"
-                        android:src="@drawable/ic_photo_camera_black_24dp" />
-                </FrameLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ratingLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/frame_layout1"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="10dp"
-                        android:orientation="horizontal"
-                        android:transitionName="ratingTransition">
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profileIV"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_gravity="bottom|center_horizontal"
+                            android:src="@drawable/upload_user_photo"
+                            android:transitionName="imageTransition"
+                            app:civ_border_color="@color/color1"
+                            app:civ_border_width="5dp" />
 
                         <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="3dp"
-                            android:src="@drawable/ic_star_black_24dp"
-                            android:textColor="@android:color/black" />
+                            android:id="@+id/cameraIV"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
+                            android:layout_gravity="bottom|end"
+                            android:background="@drawable/custom_round2"
+                            android:padding="12dp"
+                            android:src="@drawable/ic_photo_camera_black_24dp" />
+                    </FrameLayout>
+                </FrameLayout>
 
-                        <TextView
-                            android:layout_width="25dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="3dp"
-                            android:layout_marginEnd="5dp"
-                            android:gravity="center"
-                            android:text="4.5"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                </RelativeLayout>
-
-
-            </androidx.cardview.widget.CardView>
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -139,9 +247,9 @@
                             android:id="@+id/e1"
                             android:layout_width="34dp"
                             android:layout_height="34dp"
-                            android:padding="3dp"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="10dp"
+                            android:padding="3dp"
                             android:src="@drawable/ic_email" />
 
                         <ImageView
@@ -199,9 +307,9 @@
                             android:id="@+id/n1"
                             android:layout_width="38dp"
                             android:layout_height="38dp"
-                            android:padding="5dp"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="10dp"
+                            android:padding="5dp"
                             android:src="@drawable/ic_person" />
 
                         <TextView
@@ -293,6 +401,7 @@
 
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/totalEventLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -341,6 +450,7 @@
 
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/totalTourLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
