--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -11,7 +11,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:elevation="0dp">
 
@@ -22,18 +22,17 @@
             app:layout_scrollFlags="scroll|enterAlways">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/event_searchCV"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="2dp"
                     android:backgroundTint="@android:color/white"
                     app:cardCornerRadius="5dp">
 
@@ -95,9 +94,10 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/event_searchCV"
                     android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp"
+                    android:layout_marginEnd="45dp"
+                    android:layout_marginBottom="3dp"
                     android:orientation="horizontal"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/textView"
@@ -140,6 +140,8 @@
                     </co.ceryle.radiorealbutton.RadioRealButtonGroup>
                 </LinearLayout>
             </RelativeLayout>
+
+
         </androidx.appcompat.widget.Toolbar>
 
 
