--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -59,7 +59,7 @@
                             android:cursorVisible="false"
                             android:gravity="center_vertical"
                             android:hint="@string/district"
-                            android:paddingStart="15dp"
+                            android:paddingStart="10dp"
                             android:paddingEnd="15dp"
                             android:textColor="@android:color/black"
                             android:textColorHint="@android:color/darker_gray"
@@ -97,7 +97,7 @@
                     android:layout_marginEnd="45dp"
                     android:layout_marginBottom="3dp"
                     android:orientation="horizontal"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/textView"
