--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tour_searchCV"
-        android:layout_marginBottom="20dp">
+        android:layout_alignParentBottom="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -303,13 +303,13 @@
                             android:id="@+id/eventTime_ET"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:paddingTop="8dp"
-                            android:paddingBottom="8dp"
                             android:background="@drawable/edit_text_design"
                             android:focusable="false"
-                            android:paddingStart="15dp"
-                            android:paddingEnd="15dp"
                             android:fontFamily="@font/amarante"
+                            android:paddingStart="15dp"
+                            android:paddingTop="8dp"
+                            android:paddingEnd="15dp"
+                            android:paddingBottom="8dp"
                             android:textColor="@color/colorBlack"
                             android:textSize="21sp" />
 
@@ -337,10 +337,10 @@
                         android:fontFamily="@font/amarante"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
                         android:paddingStart="15dp"
+                        android:paddingTop="8dp"
                         android:paddingEnd="10dp"
+                        android:paddingBottom="8dp"
                         android:textColor="@color/colorBlack"
                         android:textSize="21sp" />
 
