--- a/app/src/main/res/layout/fragment_loader.xml
+++ b/app/src/main/res/layout/fragment_loader.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent">
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loadinAmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="50dp"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="mountain.json"
+        app:lottie_fileName="ramadan.json"
         app:lottie_loop="true" />
 
 </RelativeLayout>
