--- a/app/src/main/res/layout/join_member_layout_design.xml
+++ b/app/src/main/res/layout/join_member_layout_design.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -22,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:fontFamily="@font/amarante"
                 android:paddingStart="5dp"
                 android:text="Member Name"
                 android:textColor="@android:color/black"
@@ -33,16 +35,20 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/member_nameET"
                 android:layout_marginBottom="5dp"
+                android:fontFamily="@font/amarante"
                 android:paddingStart="5dp"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/darker_gray" />
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/member_image"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:contentDescription="@null" />
+                android:contentDescription="@null"
+                android:padding="5dp"
+                app:civ_border_color="@color/color1"
+                app:civ_border_width="4dp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
