--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_gradient"
     android:orientation="vertical"
     android:focusableInTouchMode="true"
@@ -49,6 +50,15 @@
                 android:textSize="14dp" />
         </LinearLayout>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/weatherAnim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/overviewContainer"
+            android:layout_below="@id/addressContainer"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            app:lottie_loop="true" />
 
         <LinearLayout
             android:id="@+id/overviewContainer"
@@ -81,20 +91,12 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/temp_min"
+                    android:id="@+id/feels_like"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Min Temp: -------" />
+                    android:layout_gravity="center_horizontal"
+                    android:text="Feels Like: -------" />
 
-                <Space
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/temp_max"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Max Temp: -------" />
             </LinearLayout>
 
         </LinearLayout>
@@ -305,6 +307,8 @@
                 <Space
                     android:layout_width="10dp"
                     android:layout_height="wrap_content" />
+
+
 
             </LinearLayout>
         </LinearLayout>
