some bugs fixes and delete event issue fixes

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -55,6 +55,7 @@
                         </RelativeLayout>
 
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/activityCard"
                             android:layout_width="match_parent"
                             android:layout_height="140dp"
                             android:layout_alignParentBottom="true"
@@ -68,7 +69,6 @@
                             <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent">
-
 
 
                                 <LinearLayout
