--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -386,7 +386,8 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/edit_text_design"
                         android:fontFamily="@font/amarante"
-                        android:inputType="textEmailAddress"
+                        android:inputType="text"
+                        android:focusable="false"
                         android:maxLines="1"
                         android:paddingStart="15dp"
                         android:paddingTop="8dp"
